# hifi

./: .eslintrc.js  .gitignore  CMakeLists.txt  hifi_android.py  hifi_utils.py  hifi_vcpkg.py  prebuild.py
android/: build.gradle  settings.gradle
android/apps/framePlayer/: build.gradle
android/apps/interface/: CMakeLists.txt  build.gradle
android/apps/questInterface/: CMakeLists.txt  build.gradle  settings.gradle
android/apps/questInterface/src/main/: AndroidManifest.xml
android/apps/questInterface/src/main/cpp/: native.cpp
android/apps/questInterface/src/main/java/io/highfidelity/hifiinterface/: InterfaceActivity.java  PermissionChecker.java
android/apps/questInterface/src/main/java/io/highfidelity/questInterface/: MainActivity.java  PermissionsChecker.java
assignment-client/: CMakeLists.txt
assignment-client/src/: Agent.cpp
assignment-client/src/scripts/: EntityScriptServer.cpp
cmake/macros/: TargetOculusMobile.cmake
interface/: CMakeLists.txt
interface/resources/shaders/: splashSkybox.frag
interface/src/: Application.cpp  Application.h  Menu.cpp
interface/src/avatar/: MyAvatar.h
interface/src/octree/: OctreePacketProcessor.cpp
libraries/entities/: CMakeLists.txt
libraries/gym/: CMakeLists.txt
libraries/oculusMobile/: CMakeLists.txt
libraries/script-engine/: CMakeLists.txt
script-archive/acScripts/: GymAC.js
scripts/: defaultScripts.js
scripts/system/: miniTablet.js
scripts/tutorials/: createGymSphere.js
tests-manual/render-perf/: CMakeLists.txt
tools/: CMakeLists.txt
tools/gpu-frame-player/: CMakeLists.txt
(+75 files in other folders)
